--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
 
   
   firebase_auth: ^0.18.4+1
-
+  firebase_core: ^0.5.3
   cloud_firestore: ^0.14.4
+
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
