--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-
+  cupertino_icons: ^0.1.2
+  flutter_counter: ^1.0.3
   
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
@@ -49,6 +50,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
