--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_counter: ^1.0.3
+
+  flutter_barcode_scanner: ^1.0.1
   
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
