--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_counter: ^1.0.3
 
   flutter_barcode_scanner: ^1.0.1
+  qr_flutter: ^3.2.0
   
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
