--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^0.5.3
   cloud_firestore: ^0.14.4
 
+  font_awesome_flutter: ^8.11.0
+  flutter_conditional_rendering: ^1.1.1
   provider: ^4.3.2+3
 
 dev_dependencies:
