fixed some input bugs/ input limiter/ disabled ','

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   flutter_barcode_scanner: ^1.0.1
   qr_flutter: ^3.2.0
+  auto_size_text: ^2.1.0
   
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
